<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.github.cabutchei.rsp</groupId>
	<artifactId>parent</artifactId>
	<version>0.1.0-SNAPSHOT</version>

	<packaging>pom</packaging>
	<name>Runtime Server Protocol</name>
	<description>A runtime-server protocol based on LSP</description>
	<url>https://github.com/redhat-developer/rsp-server</url>
	<scm>
		<url>https://github.com/redhat-developer/rsp-server</url>
	</scm>
	<organization>
		<name>Luan Paz</name>
		<url>https://github.com/cabutchei</url>
	</organization>
	<issueManagement>
		<system>GitHub Issues</system>
		<url>https://github.com/cabutchei/rsp-wtp-client/issues</url>
	</issueManagement>
	<licenses>
		<license>
			<name>Eclipse Public License 2.0</name>
			<url>https://www.eclipse.org/org/documents/epl-2.0/EPL-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<developers>
		<developer>
			<id>cabutchei</id>
			<name>Luan Paz</name>
			<email>luropa_paz@hotmail.com</email>
			<url>https://github.com/cabutchei</url>
		</developer>
	</developers>

	<properties>
		<tycho-version>1.3.0</tycho-version>
		<jacoco.version>0.8.4</jacoco.version>
		<moduleProperties></moduleProperties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
	</properties>

	<modules>
		<module>targetplatform</module>
		<module>api</module>
		<module>client</module>
		<module>framework</module>
		<module>runtimes</module>
		<module>distribution</module>
	</modules>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<source>1.8</source>
						<target>1.8</target>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${maven-surefire-plugin.version}</version>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho-version}</version>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<target>
						<artifact>
							<groupId>com.github.cabutchei.rsp</groupId>
							<artifactId>_rsp-target</artifactId>
							<version>${project.version}</version>
						</artifact>
					</target>
					<dependency-resolution>
						<extraRequirements>
							<requirement>
								<type>p2-installable-unit</type>
								<id>com.ibm.ws.ast.st.v85.core</id>
								<versionRange>[1.0.401.v20251120_1402,1.0.401.v20251120_1402]</versionRange>
							</requirement>
							<requirement>
								<type>p2-installable-unit</type>
								<id>com.ibm.ws.ast.st.core</id>
								<versionRange>[7.2.101.v20251120_1402,7.2.101.v20251120_1402]</versionRange>
							</requirement>
							<requirement>
								<type>p2-installable-unit</type>
								<id>com.ibm.websphere.v85.core</id>
								<versionRange>[1.0.200.v20251120_1402,1.0.200.v20251120_1402]</versionRange>
							</requirement>
							<requirement>
								<type>p2-installable-unit</type>
								<id>com.ibm.websphere.v9.core</id>
								<versionRange>[1.100.1.v20251120_1402,1.100.1.v20251120_1402]</versionRange>
							</requirement>
							<requirement>
								<type>p2-installable-unit</type>
								<id>org.jboss.tools.runtime.core</id>
								<versionRange>[3.4.5.v20190318-0933,3.4.5.v20190318-0933]</versionRange>
							</requirement>
							<requirement>
								<type>p2-installable-unit</type>
								<id>org.jboss.tools.foundation.core</id>
								<versionRange>[1.5.2.Final-v20190328-1451-B3608,1.5.2.Final-v20190328-1451-B3608]</versionRange>
							</requirement>
							<requirement>
								<type>p2-installable-unit</type>
								<id>org.eclipse.ecf</id>
								<versionRange>[3.9.3.v20181012-2016,3.9.3.v20181012-2016]</versionRange>
							</requirement>
							<requirement>
								<type>p2-installable-unit</type>
								<id>org.apache.commons.logging</id>
								<versionRange>[1.2.0.v20180409-1502,1.2.0.v20180409-1502]</versionRange>
							</requirement>
							<requirement>
								<type>p2-installable-unit</type>
								<id>org.apache.ant</id>
								<versionRange>[1.10.5.v20180808-0324,1.10.5.v20180808-0324]</versionRange>
							</requirement>
							<requirement>
								<type>p2-installable-unit</type>
								<id>org.eclipse.pde.core</id>
								<versionRange>[3.12.300.v20190214-2042,3.12.300.v20190214-2042]</versionRange>
							</requirement>
							<requirement>
								<type>p2-installable-unit</type>
								<id>org.jboss.ide.eclipse.as.wtp.core</id>
								<versionRange>[3.6.2.v20190304-1841,3.6.2.v20190304-1841]</versionRange>
							</requirement>
							<requirement>
								<type>p2-installable-unit</type>
								<id>org.jboss.ide.eclipse.as.management.core</id>
								<versionRange>[3.6.2.v20181011-1445,3.6.2.v20181011-1445]</versionRange>
							</requirement>
							<requirement>
								<type>p2-installable-unit</type>
								<id>org.jboss.ide.eclipse.as.dmr</id>
								<versionRange>[3.6.2.v20181011-1445,3.6.2.v20181011-1445]</versionRange>
							</requirement>
							<requirement>
								<type>p2-installable-unit</type>
								<id>org.jboss.ide.eclipse.archives.core</id>
								<versionRange>[3.6.202.v20181011-1445,3.6.202.v20181011-1445]</versionRange>
							</requirement>
							<requirement>
								<type>p2-installable-unit</type>
								<id>org.jboss.tools.jmx.core</id>
								<versionRange>[1.10.6.v20181011-1445,1.10.6.v20181011-1445]</versionRange>
							</requirement>
							<requirement>
								<type>p2-installable-unit</type>
								<id>org.jboss.tools.common.jdt.debug</id>
								<versionRange>[3.10.2.v20190328-1432,3.10.2.v20190328-1432]</versionRange>
							</requirement>
						</extraRequirements>
					</dependency-resolution>
					<environments>
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86_64</arch>
						</environment> 
					</environments>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-surefire-plugin</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<argLine>${moduleProperties}</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco.version}</version>
				<executions>
					<execution>
						<id>jacoco-initialize</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>

	</build>

	<profiles>
		<profile>
			<id>jdk9</id>
			<activation>
				<jdk>[9</jdk>
			</activation>
			<properties>
				<moduleProperties>--add-modules=ALL-SYSTEM</moduleProperties>
			</properties>
		</profile>
	</profiles>

	<pluginRepositories>
		<pluginRepository>
			<id>tycho-snapshots</id>
			<url>https://repo.eclipse.org/content/repositories/tycho-snapshots/</url>
		</pluginRepository>
	</pluginRepositories>

</project>
